Fixed calendar on date select cropping incorrectly.

--- a/app/pages/search/controls/_search-controls.scss
+++ b/app/pages/search/controls/_search-controls.scss
@@ -214,7 +214,6 @@
   .DayPicker {
     display: block;
     padding: 0;
-    overflow-x: hidden;
     max-width: 400px;
     margin: 0 auto;
     width: 100%;
